--- a/theme/main.css
+++ b/theme/main.css
@@ -24,15 +24,16 @@
 
 
 .cover-container {
-  max-width: 52em;
+  max-width: 72em;
   /* border: 8px solid black; */
 }
 
 
-/* body {
-  border: 10px solid black;
+ body {
+  font-family: Roboto, Ubuntu, sans-serif;
+  font-size: 1.1rem;
 }
-*/
+
 /* main {
   border: 5px solid grey;
 } */
@@ -55,6 +56,7 @@ it has a small margin on the left, and no list style.
   text-align: left;
   /* make size bigger */
   font-size: 1.5em;
+  
 
 }
 
@@ -91,7 +93,162 @@ and not underlined
 
 /* round white border */
 .project-screenshot {
-  width: 100%;
-  height: 100%;
+
   border-radius: 0.5em;
+}
+
+.feature-heading {
+  letter-spacing: -.05rem;
+}
+
+@media (min-width: 40em) {
+  .feature-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 62em) {
+  .feature-heading {
+    margin-top: 4rem;
+  }
+}
+
+/* feature subheading */
+.feature-subheading {
+  letter-spacing: -.05rem;
+}
+
+@media (min-width: 40em) {
+  .feature-subheading {
+    font-size: 30px;
+  }
+}
+
+@media (min-width: 62em) {
+  .feature-subheading {
+    margin-top: 2rem;
+  }
+}
+
+
+
+.feature-code {
+  border:2px dotted black;
+  padding: 0.5rem;
+}
+
+@media (min-width: 40em) {
+  .feature-code {
+    margin-top: 4rem;
+  }
+}
+
+/* pinkish color and a little bold for links */
+a {
+  color: #e83e8c;
+  font-weight: bold;
+}
+
+/* visited links are a little darker */
+a:visited {
+  color: #c2255c;
+}
+
+pre {
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+
+}
+
+.highlights .highlight {
+  /* margin-bottom: 1.5rem; */
+  text-align: center;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+/* ensure the highlights are NOT too big */
+.highlight {
+  max-width: 100%;
+  height: 5rem;
+}
+
+
+/* small vertical margin after hightligts */
+.highlights
+{
+  margin-bottom: 3.5rem;
+}
+
+.highlight-text {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.highlight svg {
+  width: 100%;
+  height: 50%;
+}
+
+/* no tiling, expand to fill the whole screen */
+.bg-image-defined {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+/* light transparent grey background */
+.main-content {
+  background-color: rgba(55, 55, 55, 0.7);
+  padding: 1rem;
+  border-radius: 0.5em;
+  width: 100%;
+}
+
+/* small logo */
+/* centered */
+.logo-project {
+  border-radius: 0.5em;
+  text-align: center;
+}
+
+.logo {
+  /* margin: 0 auto; */
+  width: 30%;
+  margin-bottom: 1rem;
+}
+.logo-xl {
+  width: 50%;
+}
+
+h2 {
+  padding-top: 1rem;
+}
+
+h3 {
+  padding-top: 0.8rem;
+}
+
+.screenshots {
+  /* border: 1px solid black; */
+  text-align: center;
+}
+
+.screenshots .row {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.preview {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+/* class for my photo on the about page */
+/* rounded like a circle */
+.photo-me {
+  border-radius: 50%;
+
+  border: 3px solid black;
 }
