--- a/theme/main.css
+++ b/theme/main.css
@@ -245,10 +245,27 @@ h3 {
   text-align: center;
 }
 
+.preview-floating {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  float: right;
+  margin-left: 1rem;
+}
+
 /* class for my photo on the about page */
 /* rounded like a circle */
 .photo-me {
   border-radius: 50%;
 
   border: 3px solid black;
+}
+
+
+/* 
+text in strong is similar to links
+*/
+strong {
+  color: #e83e8c;
+  font-weight: bold;
 }
